--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,1 +1,17 @@
-<p>header works!</p>
+<div class="container">
+  <img src="../../../assets/other.png" alt="logo" />
+</div>
+<div class="container">
+  <!-- NavBar -->
+  <ul class="flex">
+    <li class="mr-6">
+      <a class="text-gray-500 hover:text-white-800" href="#">Project</a>
+    </li>
+    <li class="mr-6">
+      <a class="text-gray-500 hover:text-white-800" href="https://medium.com/@alex1kariuki">Blog</a>
+    </li>
+    <li class="mr-6">
+      <a class="text-gray-500 hover:text-white-800" href="#">Contact</a>
+    </li>
+  </ul>
+</div>
