Added the beyond page

--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -49,6 +49,11 @@
         </div>
       </div>
       <!-- CTA Button -->
-      <button type="button" class="btn">Beyond Code</button>
+      <button type="button" class="btn" href="/beyond">Beyond Code</button>
   </div>
 </div>
+
+<!-- FAB Buy Me Coffee -->
+<button type="button" class="btn btn-primary rounded-circle floating-action-button">
+  <i class="fas fa-coffee"></i>
+</button>
