--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,17 +1,19 @@
 <div class="container">
-  <img src="../../../assets/other.png" alt="logo" />
+  <a href="#">
+    <img src="../../../assets/other.png" alt="logo"/>
+  </a>
 </div>
 <div class="container">
   <!-- NavBar -->
   <ul class="flex">
     <li class="mr-6">
-      <a class="text-gray-500 hover:text-white-800" href="#">Project</a>
+      <a class="text-gray-500 hover:text-white-800" href="/projects">Project's</a>
     </li>
     <li class="mr-6">
-      <a class="text-gray-500 hover:text-white-800" href="https://medium.com/@alex1kariuki">Blog</a>
+      <a class="text-gray-500 hover:text-white-800" href="https://medium.com/@alex1kariuki">Blog's</a>
     </li>
     <li class="mr-6">
-      <a class="text-gray-500 hover:text-white-800" href="#">Contact</a>
+      <a class="text-gray-500 hover:text-white-800" href="/contacts">Contact's</a>
     </li>
   </ul>
 </div>
