Finished working on the project page

--- a/src/app/core/projects/projects.component.html
+++ b/src/app/core/projects/projects.component.html
@@ -1,2 +1,141 @@
 <app-header></app-header>
-<p>projects works!</p>
+
+
+<div id="carouselExample" class="carousel slide">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <div class="grid">
+        <div class="row">
+          <div class="col">
+            <div class="card"></div>
+          </div>
+          <div class="col">
+            <p id="title">Projects</p>
+            <p id="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas
+              vel sint
+              commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat
+              iusto
+              fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati
+              tenetur
+              iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut!</p>
+            <p id="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas
+              vel sint
+              commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat
+              iusto
+              fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati
+              tenetur
+              iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut!</p>
+
+            <p id="technologies">Technologies</p>
+            <div class="row technologies">
+              <div class="col">
+                <div class="card"></div>
+              </div>
+              <div class="col">
+                <div class="card"></div>
+              </div>
+              <div class="col">
+                <div class="card"></div>
+              </div>
+              <div class="col">
+                <div class="card"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="grid">
+        <div class="row">
+          <div class="col">
+            <div class="card"></div>
+          </div>
+          <div class="col">
+            <p id="title">Projects</p>
+            <p id="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas
+              vel sint
+              commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat
+              iusto
+              fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati
+              tenetur
+              iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut!</p>
+            <p id="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas
+              vel sint
+              commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat
+              iusto
+              fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati
+              tenetur
+              iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut!</p>
+
+            <p id="technologies">Technologies</p>
+            <div class="row technologies">
+              <div class="col">
+                <div class="card"></div>
+              </div>
+              <div class="col">
+                <div class="card"></div>
+              </div>
+              <div class="col">
+                <div class="card"></div>
+              </div>
+              <div class="col">
+                <div class="card"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="grid">
+        <div class="row">
+          <div class="col">
+            <div class="card"></div>
+          </div>
+          <div class="col">
+            <p id="title">Projects</p>
+            <p id="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas
+              vel sint
+              commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat
+              iusto
+              fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati
+              tenetur
+              iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut!</p>
+            <p id="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas
+              vel sint
+              commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat
+              iusto
+              fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati
+              tenetur
+              iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut!</p>
+
+            <p id="technologies">Technologies</p>
+            <div class="row technologies">
+              <div class="col">
+                <div class="card"></div>
+              </div>
+              <div class="col">
+                <div class="card"></div>
+              </div>
+              <div class="col">
+                <div class="card"></div>
+              </div>
+              <div class="col">
+                <div class="card"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
