Finished the contacts page

--- a/src/app/core/contact/contact.component.html
+++ b/src/app/core/contact/contact.component.html
@@ -1,2 +1,42 @@
 <app-header></app-header>
-<p>contact works!</p>
+<div class="grid">
+  <div class="row">
+    <div class="col-3">
+      <!--  -->
+      <div class="talk">
+        <p id="title">Let's Talk</p>
+        <p id="subtitle">I reply to most requests, it just might 
+          take a while to go through all the amazing
+          ones as I watch StarWars.</p>
+        <p id="title">Email</p>
+        <p id="subtitle">You can <a href="mailto:alexngugi47@gmail.com?subject=Lets Work together!&body=Hey there,">email me directly</a> to avoid filling 
+          the boring form.</p>
+        <p id="title">Urgent</p>
+        <p id="subtitle">Book a session with me on <a href="calendly.com/alex1kariuki/">calendly</a>.</p>
+      </div>
+    
+      <div class="row technologies">
+        <div class="col">
+          <div class="card"></div>
+        </div>
+        <div class="col">
+          <div class="card"></div>
+        </div>
+        <div class="col">
+          <div class="card"></div>
+        </div>
+        <div class="col">
+          <div class="card"></div>
+        </div>
+      </div>
+    </div> 
+    <div class="col collab">
+      <div class="card">
+        <p id="title">I'd love to collab on your project.<br>Let me know what that is.</p>
+       <!-- Here goes the code -->
+       <!-- <app-contact-service></app-contact-service> -->
+       <app-contact-form></app-contact-form>
+      </div>
+    </div>
+  </div>
+</div>
