--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -57,3 +57,5 @@
 <button type="button" class="btn btn-primary rounded-circle floating-action-button">
   <i class="fas fa-coffee"></i>
 </button>
+
+<app-footer></app-footer>
