--- a/src/app/core/success/success.component.html
+++ b/src/app/core/success/success.component.html
@@ -1,1 +1,10 @@
-<p>success works!</p>
+<app-header></app-header>
+<div class="success">
+  <div class="card">
+    <p id="title">Thank You!</p>
+    <div class="ball"></div>
+    <p id="tagline">I will contact you soon and we can <br>
+      get the ball rolling.</p>
+      <button type="button" class="btn" href="/projects">PROJECTS</button>
+  </div>
+</div>
