Contact and home page

--- a/src/app/core/contact/contact.component.html
+++ b/src/app/core/contact/contact.component.html
@@ -12,7 +12,7 @@
         <p id="subtitle">You can <a href="mailto:alexngugi47@gmail.com?subject=Lets Work together!&body=Hey there,">email me directly</a> to avoid filling 
           the boring form.</p>
         <p id="title">Urgent</p>
-        <p id="subtitle">Book a session with me on <a href="calendly.com/alex1kariuki/">calendly</a>.</p>
+        <p id="subtitle">Book a session with me on <a href="https://calendly.com/alex1kariuki/tech-business">calendly</a>.</p>
       </div>
     
       <div class="row technologies">
