--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -8,20 +8,20 @@
       <div class="card-deck">
         <div class="card card-1">
           <div class="card-body">
-            <h5 class="card-title">Card 1</h5>
-            <p class="card-text">This is a simple card with some text as content.</p>
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
           </div>
         </div>
         <div class="card card-2">
           <div class="card-body">
-            <h5 class="card-title">Card 2</h5>
-            <p class="card-text">This is another simple card with some text as content.</p>
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
           </div>
         </div>
         <div class="card card-3">
           <div class="card-body">
-            <h5 class="card-title">Card 3</h5>
-            <p class="card-text">This is another simple card with some text as content.</p>
+            <h5 class="card-title"></h5>
+            <p class="card-text"></p>
           </div>
         </div>
       </div>
