--- a/src/app/shared/contact-form/contact-form.component.html
+++ b/src/app/shared/contact-form/contact-form.component.html
@@ -20,4 +20,6 @@
     </div>
   </form>
 </div>
-<button type="button" class="btn" href="/success">Submit</button>
+<a href="/success">
+  <button type="button" class="btn" >Submit</button>
+</a>
