--- a/src/app/core/success/success.component.scss
+++ b/src/app/core/success/success.component.scss
@@ -8,9 +8,9 @@
     width: 80%;
     border-radius: 20px;
     #title {
-      font-size: 30px;
+      font-size: 28px;
       text-align: center;
-      margin-top: 10%;
+      margin-top:3%;
     }
     .ball {
       display: flex;
@@ -24,9 +24,10 @@
       margin-top: 3%;
     }
     #tagline {
-      font-size: 30px;
+      font-size: 25px;
       text-align: center;
-      margin-top: 10%;
+      margin-top: 5%;
+      color: gray;
     }
     .btn {
       display: block;
