Changed the workflows to run for owner and non owner permissions

--- a/src/app/core/projects/projects.component.html
+++ b/src/app/core/projects/projects.component.html
@@ -18,7 +18,7 @@
               fuga praesentium optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis obcaecati
               tenetur
               iure eius earum ut molestias architecto voluptate aliquam nihil, eveniet aliquid culpa officia aut!</p>
-            <p id="subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia, molestiae quas
+            <p id="subtitle">Lorem ipsum dolor sit amsset consectetur adipisicing elit. Maxime mollitia, molestiae quas
               vel sint
               commodi repudiandae consequuntur voluptatum laborum numquam blanditiis harum quisquam eius sed odit fugiat
               iusto
