Added the dynamic project scope

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,16 +1,16 @@
 <div class="container">
-  <img src="assets/images/logo.png" alt="logo"/>
+  <img src="assets/images/logo.png" alt="logo" (click)="onHomeClicked()"/>
 </div>
 <div class="container">
   <ul class="nav justify-content-center">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Projects</a>
+      <a class="nav-link active" aria-current="page" href="/projects">Open Source</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Blog</a>
+      <a class="nav-link" href="https://medium.com/@alex1kariuki">Blog</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Contact</a>
+      <a class="nav-link" href="mailto:alexngugi47@gmail.com">Get in touch</a>
     </li>
   </ul>
 </div>
