--- a/src/app/shared/components/overview/overview.component.scss
+++ b/src/app/shared/components/overview/overview.component.scss
@@ -18,6 +18,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  cursor: grab;
+  user-select: none;
 }
 
 .card-0 {
@@ -35,6 +37,11 @@
   z-index: 1;
 }
 
+.card-default {
+  transform: rotate(0deg);
+  z-index: 0;
+}
+
 .card img {
   width: 100px;
   height: 100px;
@@ -49,4 +56,9 @@
 .card:hover {
   transform: scale(1.05);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+}
+
+.card.dragging {
+  opacity: 0.5;
+  cursor: grabbing;
 }
